--- a/client/src/assets/i18n/ru.po
+++ b/client/src/assets/i18n/ru.po
@@ -976,7 +976,7 @@ msgid ""
 "2. target meeting must be created.\n"
 "3. forwarding must be activated in the workflow in the state."
 msgstr ""
-"Mogu moći prosljeđivati prijedloge na druge sastanke u okviru instance E-Sjednicea.\n"
+"Mogu moći prosljeđivati prijedloge na druge sastanke u okviru instance E-Sjednice.\n"
 "\n"
 "Daljnji zahtjevi:\n"
 "1. Hijerarhija prosljeđivanja mora biti postavljena na organizacijskom nivou u Odboru.\n"
